# hw-project

./: .gitignore  README.md
casign/: CMakeCache.txt  CMakeLists.txt  Makefile  casign.cpp  cred_create  credential.json  test.json
casign/openssl_utils/: openssl_utils.cpp
oracle/: CMakeCache.txt  CMakeLists.txt  Makefile  listenoracle.java
oracle/server_folder/: age  client_X_randAddList  client_X_randMulList  confused_data  enc_credential.json  grade  name  subject  university
oracle/src/: ABY  ctcpserver.cpp  main.cpp  oracle.cpp  oracle.h  oracle_circuit.cpp  oracle_circuit.h
user/: CMakeCache.txt  CMakeLists.txt  Makefile  execclient.java  execuser.java  user
user/client_folder/: confused_data  credential.json  decrypted_confused_data  enc_credential.json  grade  name  subject  university  verifier_confused_data
user/src/: client.cpp  client.h  client_circuit.cpp  client_circuit.h  ctcpclient.cpp  ctcpclient.h  user.cpp  user.h
user/src/openssl_utils/: openssl_utils.h
verifier/: CMakeCache.txt  CMakeLists.txt  Makefile  listenverifier.java  verifier
verifier/client_folder/: to_v_attr.json
verifier/src/: ctcpserver.cpp  ctcpserver.h  main.cpp  verifier.cpp  verifier.h
verifier/src/openssl_utils/: openssl_utils.cpp
verifier/verifier_folder/: client_X_randAddList  client_X_randMulList  decrypted_confused_data  enc_credential_v.json  to_v_attr.json  verifier_confused_data
